--- a/LeetCode/1062. 最长重复子串.md
+++ b/LeetCode/1062. 最长重复子串.md
@@ -36,12 +36,84 @@
 
 ## 解
 
-整体分为两步进行：
+动态规划，两重循环，如果当前位匹配上了，就把前一位DP记录下来的结果 + 1 赋给当前位DP。
 
-1. 按照从1到N的间隔中的子字符串长度执行搜索。
-2. 检查是否存在给定长度L的重复子字符串。
+```java
+class Solution {
+    public int longestRepeatingSubstring(String S) {
+        if(S == null || S.length() == 0){
+            return 0;
+        }
+        
+        int n = S.length();
+        int res = 0;
+        
+        int [][] dp = new int[n+1][n+1];
+        for(int i = 1; i<=n; i++){
+            for(int j = 1; j<i; j++){
+                if(S.charAt(i-1) == S.charAt(j-1)){
+                    // 对重复子串的长度进行累加
+                    dp[i][j] = dp[i-1][j-1]+1;
+                    res = Math.max(res, dp[i][j]);            
+                }
+            }
+        }
+        
+        return res;
+    }
+}
+```
 
-### 步骤一：按子串长度进行二分查找
+### 解析
+
+以“aabcaabdaab”为例
+
+```java
+       a, a, b, c, a, a, b, d, a, a, b
+  [ 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+a [0,  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+a [0, 1,  0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+b [0, 0, 0,  0, 0, 0, 0, 0, 0, 0, 0, 0]
+c [0, 0, 0, 0,  0, 0, 0, 0, 0, 0, 0, 0]
+a [0, 1, 1, 0, 0,  0, 0, 0, 0, 0, 0, 0]
+a [0, 1, 2, 0, 0, 1,  0, 0, 0, 0, 0, 0]
+b [0, 0, 0, 3, 0, 0, 0,  0, 0, 0, 0, 0]
+d [0, 0, 0, 0, 0, 0, 0, 0,  0, 0, 0, 0]
+a [0, 1, 1, 0, 0, 1, 1, 0, 0,  0, 0, 0]
+a [0, 1, 2, 0, 0, 1, 2, 0, 0, 1,  0, 0]
+b [0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0,  0]
+```
+
+二位数组，数据重叠示意图，因为循环限值了*j < i*，所以右上角是未使用部分，以空格分开，真实使用空间如下：
+
+```java
+      a, a, b, c, a, a, b, d, a, a, b
+a [0,
+a [0, 1,
+b [0, 0, 0,
+c [0, 0, 0, 0,
+a [0, 1, 1, 0, 0,
+a [0, 1, 2, 0, 0, 1,
+b [0, 0, 0, 3, 0, 0, 0,
+d [0, 0, 0, 0, 0, 0, 0, 0,
+a [0, 1, 1, 0, 0, 1, 1, 0, 0,
+a [0, 1, 2, 0, 0, 1, 2, 0, 0, 1,
+b [0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0,
+```
+
+`dp[i][j] = dp[i-1][j-1]+1`使得重复子串的长度进行累加。
+
+同理，以“aaaaa”为例：
+
+```java
+      a, a, a, a, a
+  [0, 0, 0, 0, 0, 0]
+a [0, 0, 0, 0, 0, 0]
+a [0, 1, 0, 0, 0, 0]
+a [0, 1, 2, 0, 0, 0]
+a [0, 1, 2, 3, 0, 0]
+a [0, 1, 2, 3, 4, 0]
+```
 
 
 
