--- a/LeetCode/365. 水壶问题.md
+++ b/LeetCode/365. 水壶问题.md
@@ -38,7 +38,7 @@
 -   其次，对一个不满的桶加水是没有意义的。因为如果另一个桶是空的，那么这个操作的结果等价于直接从初始状态给这个桶加满水；而如果另一个桶是满的，那么这个操作的结果等价于从初始状态分别给两个桶加满；
 -   再次，把一个不满的桶里面的水倒掉是没有意义的。因为如果另一个桶是空的，那么这个操作的结果等价于回到初始状态；而如果另一个桶是满的，那么这个操作的结果等价于从初始状态直接给另一个桶倒满。
 
-因此，我们可以认为每次操作只会给水的总量带来 `x` 或者 `y` 的变化量。因此我们的目标可以改写成：找到一对整数 $ a, b$ 使得
+因此，我们可以认为每次操作只会给水的总量带来 `x` 或者 `y` 的变化量。因此我们的目标可以改写成：找到一对整数 *a*,*b​* 使得
 $$
 ax+by=z
 $$
@@ -64,10 +64,10 @@ $$
 public boolean canMeasureWater(int x, int y, int z) {
         if (x == 0 && y == 0) return z == 0;
         int a = x, b = y;
-  			//辗转相除法，获取最大公约数
+        //辗转相除法，获取最大公约数
         while (b != 0) {
             a %= b;
-          	//交换a,b
+            //交换a,b
             a ^= b;
             b ^= a;
             a ^= b;
