--- a/LeetCode/75. 颜色分类.md
+++ b/LeetCode/75. 颜色分类.md
@@ -18,7 +18,7 @@
 
 我们用三个指针（p0, p2 和curr）来分别追踪0的最右边界，2的最左边界和当前考虑的元素。
 
-![image.png](img/颜色分类1.png)
+![image.png](img/75-1.png)
 
 本解法的思路是沿着数组移动 `curr` 指针，若`nums[curr] = 0`，则将其与 `nums[p0]`互换；若 `nums[curr] = 2` ，则与 `nums[p2]`互换。
 
