--- a/数据结构与算法/数据结构基础学习(三).md
+++ b/数据结构与算法/数据结构基础学习(三).md
@@ -79,23 +79,23 @@
 
 ##### 空间复杂度
 
-假设数组的元素个数是n，由于在整个排序的过程中，我们是直接在给定的数组里面进行元素的两两交换，所以空间复杂度是O(1)。
+假设数组的元素个数是n，由于在整个排序的过程中，我们是直接在给定的数组里面进行元素的两两交换，所以空间复杂度是$O(1)$。
 
 ##### 时间复杂度
 
 1.  给定的数组按照顺序已经拍好
 
-    在这种情况下，我们只需要进行n-1次的比较，两两交换次数为0，时间复杂度是O(N)。这是最好的情况。
+    在这种情况下，我们只需要进行 $n-1$ 次的比较，两两交换次数为0，时间复杂度是$O(N)$。这是最好的情况。
 
 2.  给定的数组按照逆序排列
 
-    这种情况下，我们需要进行n(n-1)/2次比较，时间复杂度是O(N^2^)。则是最坏的情况。
+    这种情况下，我们需要进行 $n(n-1)/2$ 次比较，时间复杂度是$O(N^2)$。则是最坏的情况。
 
 3.  给定的数组杂乱无章
 
-    在这种情况下，平均时间复杂度为O(N^2^)。
+    在这种情况下，平均时间复杂度为$O(N^2)$。
 
-由此可见，冒泡排序的时间复杂度是O(N^2^)。它是一种**稳定的排序算法**。（稳定是指如果数组里两个相等的数，那么排序前后这两个相等的数的相对位置保持不变。）
+由此可见，冒泡排序的时间复杂度是$O(N^2)$。它是一种**稳定的排序算法**。（稳定是指如果数组里两个相等的数，那么排序前后这两个相等的数的相对位置保持不变。）
 
 ## 插入排序（Insertion Sort）
 
@@ -147,21 +147,101 @@ public void insertionSort(int[] nums) {
 
 ##### 空间复杂度
 
-假设数组的元素个数是n，由于在整个排序的过程中，是直接在给定的数组里面进行元素的两两交换，空间复杂度是O(1)。
+假设数组的元素个数是n，由于在整个排序的过程中，是直接在给定的数组里面进行元素的两两交换，空间复杂度是$O(1)$。
 
 ##### 时间复杂度
 
 1.  给定的数组按照顺序已经排好
 
-    只需要进行n-1次的比较，两两交换次数为0，时间复杂度是O(N)。这是最好的情况。
+    只需要进行n-1次的比较，两两交换次数为0，时间复杂度是$O(N)$。这是最好的情况。
 
 2.  给定的数组按照逆序排列
 
-    这种情况下，我们需要进行n(n-1)/2次比较，时间复杂度是O(N^2^)。则是最坏的情况。
+    这种情况下，我们需要进行n(n-1)/2次比较，时间复杂度是$O(N^2)$。则是最坏的情况。
 
 3.  给定的数组杂乱无章
 
-    在这种情况下，平均时间复杂度为O(N^2^)。
+    在这种情况下，平均时间复杂度为$O(N^2)$。
 
-由此可见，和冒泡排序一样，插入排序的时间复杂度是 O(n2)，并且它也是一种**稳定的排序算法**。
+由此可见，和冒泡排序一样，插入排序的时间复杂度是 $O(n^2)$，并且它也是一种**稳定的排序算法**。
+
+## 归并排序（Merge Sort）
+
+#### 基本思想
+
+核心是分治，就是把一个复杂的问题分成两个或多个相同或相似的子问题，然后把子问题分成更小的子问题，直到子问题可以简单的直接求解，最原问题的解就是子问题解的合并，归并排序将分治的思想体现得淋漓尽致。
+
+#### 实现
+
+一开始先把数组从中间划分成两个子数组，一直递归地把子数组划分成更小的子数组，直到子数组里面只有一个元素，才开始排序。
+
+排序的方法就是按照大小顺序合并两个元素，接着依次按照递归地返回顺序，不断地合并排好序的子数组，直到最后把整个数组的顺序排好。
+
+#### 代码实现
+
+```java
+    public void mergeSort(int[] nums, int lo, int hi) {
+        // 判断是否只剩下最后一个元素
+        if (lo >= hi) {
+            return;
+        }
+
+        // 从中间将数组分成两个部分
+        int mid = lo + (hi - lo) / 2;
+
+        // 分别递归地将左右两半排好序
+        mergeSort(nums, lo, mid);
+        mergeSort(nums, mid + 1, hi);
+
+        // 将排好序的左右两半合并
+        merge(nums, lo, mid, hi);
+    }
+
+    private void merge(int[] nums, int lo, int mid, int hi) {
+        // 复制一份原来的数组
+        int[] copy = nums.clone();
+
+        // 定义一个 k 指针表示从什么位置开始修改原来的数组
+        // i 指针表示左半边的起始位置
+        // j 指针表示右半边的起始位置
+        int k = lo, i = lo, j = mid + 1;
+        while (k <= hi) {
+            if (i > mid) {
+                // 左半边的数都处理完毕，只剩下右半边的数，只需要将右半边的数逐个拷贝过去
+                nums[k++] = copy[j++];
+            } else if (j > hi) {
+                // 右半边的数都处理完毕，只剩下左半边的数，只需要将左半边的数逐个拷贝过去就好
+                nums[k++] = copy[j++];
+            } else if (copy[j] < copy[i]) {
+                // 右边的数小于左边的数，将右边的数拷贝到合适的位置，j 指针往前移动一位
+                nums[k++] = copy[j++];
+            } else {
+                // 左边的数小于右边的数，将左边的数拷贝到合适的位置，i 指针往前移动一位
+                nums[k++] = copy[i++];
+            }
+        }
+    }
+```
+
+#### 例题分析
+
+例题：利用归并排序算法对数组 [2, 1, 7, 9, 5, 8] 进行排序。
+
+#### 解题思路
+
+![img](img/归并排序-1.gif)
+
+首先不断地对数组进行切分，直到各个子数组里面只包含一个元素。
+
+接下来递归地按照大小顺序合并切分开的子数组，递归地顺序和二叉树里的前向遍历类似。
+
+1.  合并 `[2]` 和 `[1]` 为 `[1,2]`
+2.  子数组 `[1, 2]` 和 `[7]` 合并。
+3.  右边，合并 `[9]` 和 `[5]`。
+4.  然后合并 `[5, 9]` 和 `[8]`。
+5.  最后合并 `[1, 2, 7]` 和 `[5, 8, 9]` 成 `[1, 2, 5, 8, 9]`，就可以把整个数组排好序了。
+
+合并数组 `[1, 2, 7]` 和 `[5, 8, 9]` 的操作步骤如下。
+
+![img](img/归并排序-2.gif)
 
